--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@
         <div class="section vis3_section">
             <div class = "row vis3select" align = "center">
                 <h2 id="vis3title" align = "center">And Opioid Deaths Are on the Rise</h2>
-                <div id = "vis3text" class = "vis3text col-md-6"></div>
+                <div class="row">
+                    <div id = "vis3text" class = "vis3text col-md-6"></div>
+                </div>
             </div>
             <div class="row row_no_margin">
                 <div id="select2" class="btn-group vis3_button_group" data-toggle="buttons">
